fixed img distortion

--- a/src/css/VersusScreen.css
+++ b/src/css/VersusScreen.css
@@ -20,15 +20,11 @@
 }
 
 .versus-one-hero {
-    border: .3em solid #fff;
-    display: flex;
-    flex-direction: column;
-    flex-flow: row wrap;
-    justify-content: center;
     margin-top: 1em;
 }
 
 .versus-one-hero img {
+    border: .3em solid #fff;
     justify-content: center;
 }
 
